--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -27,7 +27,7 @@ priority=4
 command=/opt/consul/consul %(ENV_CONSUL_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_CONSUL)s
-user=root
+user=consul
 stdout_events_enabled = true
 stderr_events_enabled = true
 
@@ -46,7 +46,7 @@ directory=/opt/fabio
 command=fabio %(ENV_FABIO_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_FABIO)s
-user=root
+user=fabio
 stdout_events_enabled = true
 stderr_events_enabled = true
 
@@ -55,7 +55,7 @@ priority=8
 command=/opt/zkStart.sh %(ENV_ZOOKEEPER_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_ZOOKEEPER)s
-user=root
+user=zookeeper
 stdout_events_enabled = true
 stderr_events_enabled = true
 
@@ -73,7 +73,7 @@ priority=64
 command=marathon %(ENV_MARATHON_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_MARATHON)s
-user=root
+user=marathon
 stdout_events_enabled = true
 stderr_events_enabled = true
 
@@ -98,17 +98,8 @@ stopwaitsecs = 30
 stdout_events_enabled = true
 stderr_events_enabled = true
 
-[program:chronos]
-priority=512
-command=/usr/bin/chronos run_jar %(ENV_CHRONOS_APP_PARAMS)s
-autorestart=true
-autostart=%(ENV_START_CHRONOS)s
-user=root
-stdout_events_enabled = true
-stderr_events_enabled = true
-
 [program:netdata]
-priority=768
+priority=512
 command=/opt/netdata/usr/sbin/netdata %(ENV_NETDATA_APP_PARAMS)s
 autorestart=true
 autostart=%(ENV_START_NETDATA)s
