Verion 0.4.2 with traefik

--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -1,4 +1,5 @@
 [supervisord]
+root=true
 nodaemon=true
 childlogdir=/tmp/supervisord
 logfile=/tmp/supervisord/supervisord.log
@@ -40,6 +41,15 @@ user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
+[program:zookeeper]
+priority=8
+command=/opt/zkStart.sh %(ENV_ZOOKEEPER_APP_PARAMS)s
+autorestart=true
+autostart=%(ENV_START_ZOOKEEPER)s
+user=zookeeper
+stdout_events_enabled = true
+stderr_events_enabled = true
+
 [program:fabio]
 priority=16
 directory=/opt/fabio
@@ -50,14 +60,16 @@ user=fabio
 stdout_events_enabled = true
 stderr_events_enabled = true
 
-[program:zookeeper]
-priority=8
-command=/opt/zkStart.sh %(ENV_ZOOKEEPER_APP_PARAMS)s
+[program:traefik]
+priority=16
+directory=/opt/traefik
+command=traefik %(ENV_TRAEFIK_APP_PARAMS)s
 autorestart=true
-autostart=%(ENV_START_ZOOKEEPER)s
-user=zookeeper
+autostart=%(ENV_START_TRAEFIK)s
+user=traefik
 stdout_events_enabled = true
 stderr_events_enabled = true
+
 
 [program:mesos-master]
 priority=32
