--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 - export IP=$(/sbin/ifconfig eth0 | awk '/inet addr:/{gsub(/.*:/,"",$2);print $2;exit}')
 - echo $IP
 - export START_DNSMASQ=false
+- export START_TRAEFIK=true
 - export ZOOKEEPER_HOSTS=${IP}:2181
 - "./generate_yml.sh"
 - cat docker-compose.yml
