--- a/infrastructure/fabio.properties
+++ b/infrastructure/fabio.properties
@@ -1,5 +1,6 @@
 proxy.addr = :80
 ui.addr    = :81
+proxy.noroutestatus = 503
 registry.consul.register.addr = :81
 registry.consul.noroutehtmlpath = /panteras/http
 registry.consul.register.name = fabio-paas
