--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -5,20 +5,20 @@ FROM ubuntu:16.04
 
 MAINTAINER Wojciech Sielski "wsielski@team.mobile.de"
 
-RUN apt-get update \
+RUN apt-get update --no-install-recommends \
     && apt-get install -y \
       locales \
       apt-transport-https \
-      python-pip \
+      python3-minimal \
+      python3-setuptools \
       wget \
       curl \
       unzip \
-      dnsutils \
-      vim \
-      git \
+      vim-tiny \
       lolcat \
       toilet \
       jshon \
+    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -32,18 +32,18 @@ ENV TERM xterm
 ENV HOME /root
 ENV GOPATH ${HOME}/go
 
-ENV SUPERVISORD_APP_VERSION       4.0.4
-ENV DOCKER_APP_VERSION            5:19.03.1~3-0~ubuntu-xenial
-ENV CONSUL_APP_VERSION            1.5.3
-ENV MESOS_APP_VERSION             1.8.0-2.0.6.ubuntu1604
-#ENV MARATHON_APP_VERSION          1.7.189-0.1.20190125223314.ubuntu1604
-ENV MARATHON_APP_VERSION          1.7.189-48bfd6000
+ENV SUPERVISORD_APP_VERSION       4.1.0
+ENV DOCKER_APP_VERSION            5:19.03.5~3-0~ubuntu-xenial
+ENV CONSUL_APP_VERSION            1.6.2
+ENV MESOS_APP_VERSION             1.9.0-2.0.1.ubuntu1604
+#ENV MARATHON_APP_VERSION          1.9.81-0.1.20190905233136.ubuntu1604
+ENV MARATHON_APP_VERSION          1.7.216-9e2a9b579
 ENV REGISTRATOR_APP_VERSION       v7
-ENV FABIO_APP_VERSION             1.5.11
-ENV FABIO_GO_APP_VERSION          go1.11.5
-ENV NETDATA_APP_VERSION           1.16.1
+ENV FABIO_APP_VERSION             1.5.13
+ENV FABIO_GO_APP_VERSION          go1.13.4
+ENV NETDATA_APP_VERSION           1.19.0
 #ENV TRAEFIK_APP_VERSION           v2.0.0-beta1
-ENV TRAEFIK_APP_VERSION           v1.7.12
+ENV TRAEFIK_APP_VERSION           v1.7.19
 
 
 ENV DOCKER_HOST unix:///tmp/docker.sock
@@ -51,30 +51,27 @@ ENV DOCKER_HOST unix:///tmp/docker.sock
 
 # SupervisorD
 #
-#RUN pip install --upgrade pip \
-RUN pip install supervisor-stdout \
-    && pip install https://github.com/Supervisor/supervisor/archive/${SUPERVISORD_APP_VERSION}.zip
+RUN wget https://github.com/Supervisor/supervisor/archive/${SUPERVISORD_APP_VERSION}.zip \
+    && unzip ${SUPERVISORD_APP_VERSION}.zip \
+    && cd supervisor-${SUPERVISORD_APP_VERSION} \
+    && python3 setup.py install \
+    && cd - \
+    && rm -rf ${SUPERVISORD_APP_VERSION}.zip supervisor-${SUPERVISORD_APP_VERSION}
 
-
-# DNSMASQ
-#
-RUN apt-get update \
-    && apt-get install -y dnsmasq dnsutils \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
 
 # ZOOKEEPER MESOS MARATHON
 #
 RUN echo "deb http://repos.mesosphere.com/ubuntu/ xenial main" > /etc/apt/sources.list.d/mesosphere.list \
     # marathon postinstall fix, since we we dont need systemctl
-    && ln -sf /bin/true  /bin/systemctl \
     && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv DF7D54CBE56151BF \
     && apt-get update \
     # marathon still build against java8
-    && apt-get -y install \
+    && apt-get -y install --no-install-recommends \
        openjdk-8-jre \
        mesos=${MESOS_APP_VERSION}  \
-#      marathon=${MARATHON_APP_VERSION} \
+       zookeeper \
+    #  marathon=${MARATHON_APP_VERSION} \
+    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && rm /etc/mesos/zk \
@@ -84,8 +81,6 @@ RUN echo "deb http://repos.mesosphere.com/ubuntu/ xenial main" > /etc/apt/source
     && mkdir -p ${JAVA_DIR}/conf/management/ \
     && touch ${JAVA_DIR}/conf/management/management.properties
 
-#ADD marathon_${MARATHON_APP_VERSION}.tgz /
-#RUN ln -s /usr/share/marathon/bin/marathon /usr/local/bin
 RUN wget https://downloads.mesosphere.io/marathon/builds/${MARATHON_APP_VERSION}/marathon-${MARATHON_APP_VERSION}.tgz \
     && mkdir /opt/marathon \
     && tar -C /opt/marathon --strip 1 -zxf marathon-${MARATHON_APP_VERSION}.tgz \
@@ -155,7 +150,8 @@ ADD traefik.toml /opt/traefik
 
 # NETDATA
 #
-RUN apt-get update \
+RUN savedAptMark="$(apt-mark showmanual)" \
+    && apt-get update \
     && apt-get -y install \
        zlib1g-dev \
        gcc \
@@ -166,6 +162,7 @@ RUN apt-get update \
        pkg-config \
        uuid-dev \
        libmnl-dev \
+       git \
     && git clone -b v${NETDATA_APP_VERSION} --single-branch https://github.com/netdata/netdata.git /tmp/netdata.git --depth=1 \
     && cd /tmp/netdata.git \
     && ./netdata-installer.sh --dont-wait --install /opt \
@@ -173,17 +170,9 @@ RUN apt-get update \
     && rm -rf /tmp/* \
     && ln -sf /dev/stdout /opt/netdata/var/log/netdata/access.log \
     && ln -sf /dev/stderr /opt/netdata/var/log/netdata/error.log \
-    && apt-get -y remove \
-       zlib1g-dev \
-       gcc \
-       make \
-       autoconf \
-       autogen \
-       automake \
-       pkg-config \
-       uuid-dev \
-       libmnl-dev \
-    && apt-get autoremove -y \
+    && apt-mark auto '.*' > /dev/null \
+    && apt-mark manual $savedAptMark \
+    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false  \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
