workflows: fix typo in prcheck

--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        submodule: true
+        submodules: true
 
     - name: Build Image
       run: |-
