workflows: add `up` command to docker-compose

--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Generate yaml and Start PanteraS
       run: |-
         ./generate_yml.sh && \
-        docker-compose -d
+        docker-compose up -d
 
     - name: Build and Run Example WebApp
       run: |-
